Cell group component added

--- a/src/components/Cell/Cell.scss
+++ b/src/components/Cell/Cell.scss
@@ -10,4 +10,17 @@
         background-color: $color-light-hover;
         cursor: pointer;
     }
+
+    &.annotations {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+
+        .annotation {
+            width: 0.5rem;
+            height: 0.5rem;
+            font-size: 0.3rem;
+            line-height: 1.7;
+            color: $color-dark-gray;
+        }
+    }
 }
