--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,12 @@
 // Temporary
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-    line-height: 1.5;
-}
+// * {
+//     padding: 0;
+//     margin: 0;
+//     box-sizing: border-box;
+//     font-family: Arial, Helvetica, sans-serif;
+//     font-size: 1rem;
+//     line-height: 1.5;
+// }
 
 .container-center {
     display: flex;
