Added cell selection and coordinates stored in store

--- a/src/components/Cell/Cell.scss
+++ b/src/components/Cell/Cell.scss
@@ -23,4 +23,12 @@
             color: $color-dark-gray;
         }
     }
+
+    &.edit {
+        color: $color-edit;
+    }
+
+    &.wrong {
+        color: $color-wrong;
+    }
 }
