--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,9 @@
 $color-light: #f4f4f4;
 $color-light-hover: #e0e0e0;
+$color-light-hightlight: #d0d0d0;
 $color-dark: #333;
 $color-light-gray: #ccc;
 $color-gray: #999;
 $color-dark-gray: #666;
+$color-edit: #1446a8;
+$color-wrong: #942334;
