Refactored some code. Added error detection

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -7,4 +7,4 @@ $color-gray: #999;
 $color-dark-gray: #666;
 $color-edit: #1446a8;
 $color-cell-selected: #d1dffa;
-$color-wrong: #942334;
+$color-wrong: #c9384d;
