--- a/design/scss/styles.scss
+++ b/design/scss/styles.scss
@@ -1,4 +1,10 @@
-.container-center {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
     display: flex;
     width: 100vw;
     height: 100vh;
