--- a/design/scss/styles.scss
+++ b/design/scss/styles.scss
@@ -4,6 +4,20 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 20px;
+}
+
+@media (min-width: 600px) {
+    html {
+        font-size: 35px;
+    }
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .container {
     display: flex;
     width: 100vw;
