--- a/design/scss/sudoku.scss
+++ b/design/scss/sudoku.scss
@@ -12,17 +12,13 @@ $color-wrong: #c9384d;
 
 .sudoku {
     * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: Arial, Helvetica, sans-serif;
         font-size: 1rem;
         line-height: 1.5;
     }
 
     background-color: $color-gray;
     padding: 2px;
-    margin: 1rem;
+    margin: 0 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2px;
@@ -62,10 +58,6 @@ $color-wrong: #c9384d;
 
 #numbar {
     * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: Arial, Helvetica, sans-serif;
         font-size: 1.2rem;
         line-height: 1.3;
     }
@@ -92,4 +84,63 @@ $color-wrong: #c9384d;
         color: $color-cell-selected;
         color: $color-edit;
     }
+}
+
+#info {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    margin: 0 1rem;
+    font-size: 0.6rem;
+    color: $color-dark;
+
+    #settings {
+        font-size: 0.8rem;
+        &:hover {
+            color: $color-edit;
+            cursor: pointer;
+        }
+    }
+}
+
+#toolbar {
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.5rem;
+    text-transform: uppercase;
+    margin: 0.2rem 0;
+
+    div {
+        margin: 0.1rem 1rem;
+        padding: 0.2rem;
+        border-radius: 0.2rem;
+
+        &:hover {
+            // background-color: $color-light-gray;
+            color: $color-edit;
+            cursor: pointer;
+        }
+    }
+
+    i {
+        display: block;
+        text-align: center;
+        margin-bottom: 0.1rem;
+
+        p {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 0.4rem;
+            display: inline;
+            padding-left: 0.1rem;
+        }
+    }
+}
+
+#title {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+        'Lucida Sans', Arial, sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1rem;
 }
