--- a/src/components/Sudoku/Sudoku.scss
+++ b/src/components/Sudoku/Sudoku.scss
@@ -2,17 +2,13 @@
 
 .sudoku {
     * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: Arial, Helvetica, sans-serif;
         font-size: 1rem;
         line-height: 1.5;
     }
 
     background-color: $color-gray;
     padding: 2px;
-    margin: 1rem;
+    margin: 0 1rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2px;
