--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 20px;
+}
+
+@media (min-width: 600px) {
+    html {
+        font-size: 35px;
+    }
+}
+
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
