--- a/design/scss/sudoku.scss
+++ b/design/scss/sudoku.scss
@@ -108,15 +108,14 @@ $color-wrong: #c9384d;
     justify-content: space-between;
     font-size: 0.5rem;
     text-transform: uppercase;
-    margin: 0.2rem 0;
+    margin: 0.3rem 0;
+    padding: 0 1rem;
 
     div {
-        margin: 0.1rem 1rem;
         padding: 0.2rem;
         border-radius: 0.2rem;
 
         &:hover {
-            // background-color: $color-light-gray;
             color: $color-edit;
             cursor: pointer;
         }
