--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,7 @@ $color-light-hover: #d4d4d4;
 $color-light-highlight: #e4e4e4;
 $color-dark: #333;
 $color-light-gray: #ccc;
+$color-disabled: #aaa;
 $color-gray: #999;
 $color-dark-gray: #666;
 $color-edit: #1446a8;
