Annotations highlighted when same number is selected somewhere else

--- a/src/components/Cell/Cell.scss
+++ b/src/components/Cell/Cell.scss
@@ -20,6 +20,10 @@
             font-size: 0.3rem;
             line-height: 1.7;
             color: $color-dark-gray;
+
+            b {
+                font-size: inherit;
+            }
         }
     }
 
