--- a/src/components/ToolbarButton/ToolbarButton.scss
+++ b/src/components/ToolbarButton/ToolbarButton.scss
@@ -25,8 +25,10 @@ div.toolbar-button {
         color: $color-wrong;
     }
 
-    &:hover {
-        color: $color-edit;
-        cursor: pointer;
+    @media (min-width: 900px) {
+        &:hover {
+            color: $color-edit;
+            cursor: pointer;
+        }
     }
 }
