--- a/src/index.scss
+++ b/src/index.scss
@@ -8,9 +8,15 @@ html {
     font-size: 20px;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 700px) {
     html {
         font-size: 35px;
+    }
+}
+
+@media (max-width: 600px) {
+    html {
+        font-size: 6.9vw;
     }
 }
 
