Added settings config modal. Made inputs update stored settings

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,9 @@
 @import '../../styles/colors';
 
+#app {
+    position: relative;
+}
+
 #top-bar {
     display: flex;
     justify-content: space-between;
@@ -33,79 +37,6 @@
             font-size: 0.8rem;
             font-weight: bold;
             margin-top: 0.1rem;
-        }
-    }
-
-    #menu-container {
-        display: flex;
-        float: right;
-
-        @media only screen and (min-width: 601px) {
-            i,
-            #menu-icon {
-                display: none;
-            }
-        }
-
-        ul {
-            display: flex;
-
-            li {
-                display: flex;
-                list-style: none;
-            }
-
-            a {
-                display: inline-block;
-                text-decoration: none;
-                color: $color-dark-gray;
-                font-size: 0.6rem;
-                padding: 0.2rem 0.4rem;
-
-                &:hover {
-                    background-color: $color-light-highlight;
-                }
-            }
-        }
-
-        @media only screen and (max-width: 600px) {
-            ul {
-                position: absolute;
-                flex-direction: column;
-                top: -10rem;
-                right: 0;
-                background-color: white;
-                z-index: 1;
-                border: $color-gray 1px solid;
-
-                li {
-                    a {
-                        width: 100%;
-                        padding-right: 00.6rem;
-                    }
-                }
-            }
-
-            i {
-                font-size: 0.7rem;
-                margin: 0.25rem 0.4rem;
-            }
-
-            #menu-icon {
-                position: absolute;
-                top: 0;
-                right: 0;
-                opacity: 0;
-                width: 0.7rem;
-                height: 0.7rem;
-                margin: 0.25rem 0.35rem;
-                cursor: pointer;
-                z-index: 1;
-
-                &:checked + ul {
-                    top: 1.2rem;
-                }
-            }
         }
     }
 }
