--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -4,11 +4,15 @@
     position: absolute;
     top: 1.2rem;
     right: 0;
-    // width: 10rem;
-    // height: 10rem;
     border: $color-dark 1px solid;
     background-color: white;
     padding: 0.4rem;
+    z-index: 2;
+
+    @media only screen and (max-width: 600px) {
+        top: 3.5rem;
+        right: 1.3rem;
+    }
 
     .MuiFormControlLabel-root
         > .MuiTypography-root.MuiFormControlLabel-label.MuiTypography-body1,
@@ -27,5 +31,14 @@
         padding: 0.17rem;
         border: $color-dark 1px solid;
         border-radius: 0.1rem;
+    }
+
+    button {
+        width: fit-content;
+        padding: 0.17rem 0.3rem;
+        margin-top: 0.5rem;
+        border: $color-dark 1px solid;
+        border-radius: 0.15rem;
+        cursor: pointer;
     }
 }
