Button added to home page and linked to new game

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -25,7 +25,7 @@
             border: #777 0.1rem solid;
             border-radius: 0.2rem;
             justify-content: center;
-            color: #c9384d;
+            color: $color-wrong;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-weight: bold;
             line-height: 0.76rem;
