--- a/src/components/NumBar/NumBar.scss
+++ b/src/components/NumBar/NumBar.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     width: fit-content;
-    margin: auto;
+    margin: 0.3rem auto;
 
     .num-cell {
         width: 1.5rem;
