Added right arrows. Adjusted styles to fit. Removed teaching option from phone

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -35,4 +35,10 @@
             color: $color-light-gray;
         }
     }
+
+    @media screen and (max-width: 600px) {
+        &.desktop-only {
+            display: none;
+        }
+    }
 }
