--- a/src/components/NumBar/NumBar.scss
+++ b/src/components/NumBar/NumBar.scss
@@ -8,8 +8,8 @@
 
     display: flex;
     justify-content: center;
-    width: fit-content;
-    margin: 0.3rem auto;
+    width: 13.85rem;
+    margin: 0.3rem 0;
 
     .num-cell {
         width: 1.5rem;
