Added conditional rendering on arrows status

--- a/src/styles/teaching-bars.scss
+++ b/src/styles/teaching-bars.scss
@@ -12,6 +12,10 @@
         & > i {
             cursor: pointer;
             color: $color-wrong;
+
+            &.arrow-selected {
+                color: $color-light-gray;
+            }
         }
     }
 }
