Highlighted area implemented

--- a/src/components/Cell/Cell.scss
+++ b/src/components/Cell/Cell.scss
@@ -51,4 +51,8 @@
         @extend %cell-highlight;
         cursor: pointer;
     }
+
+    &.teaching {
+        background-color: $color-teaching-highlight;
+    }
 }
