--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,3 +9,4 @@ $color-dark-gray: #666;
 $color-edit: #1446a8;
 $color-cell-selected: #d1dffa;
 $color-wrong: #c9384d;
+$color-teaching-highlight: #e8dadc;
